# survivalgpu_replication_material

./: .gitignore  README.md  cox_functions.py  figure2-4.py  figure5.py  figure6.py  pyproject.toml  simulation_functions.py  table1.py  table2.py  wce_functions.py
benchmark_results/: .~lock.val_breslow_efron.csv#  data_analysis.py  val_breslow_efron.csv  val_breslow_efron_summary.csv
figure_generation/: figure2-4.py  figure5.py  figure6.py  table1.py  table2.py
figures/: visualisation_benchmark_gpu.ipynb
image_generation/: generate_image_2.py  generate_image_3.py  generate_image_4.py  generate_image_5.py  generate_image_6.py  generate_image_8.py
results/: figure_2_cox.csv  figure_3_cox_bootstraps.csv  figure_4_gpu_cox.csv  figure_5_wce.csv  figure_6_wce_bootstraps.csv
scripts/: figure2-4.sh  figure5.sh  figure6.sh  generate_images.sh  table1.sh  table2.sh
